--- a/nasa final.html
+++ b/nasa final.html
@@ -3,24 +3,22 @@
   <head>
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
-    <style></style>
   </head>
+
   <body>
     <div id="container">
       <div class="main">
         <div class="main-top">
           <div class="main-top-left">
-            <a href="#"
-              >Moon to Mars Spacesuit for NASA’s Artemis III Moon Surface
-              Mission Debuts</a
-            >
+            <a href="#">
+              Moon to Mars Spacesuit for NASA's Artemis III Moon Surface
+              Mission Debuts</a>
           </div>
 
           <div class="main-top-right">
             <div class="main-top-right-up">
-              <a href="#"
-                >Spacesuit for NASA’s Artemis III Moon Surface Mission Debuts</a
-              >
+              <a href="#" >
+                Spacesuit for NASA's Artemis III Moon Surface Mission Debuts</a>
             </div>
 
             <div class="nasa-event">
@@ -28,22 +26,19 @@
               <div class="nasa-event-line-first"></div>
               <div class="tittle">
                 <a href="#"
-                  >Tue., Mar. 14, 9 a.m. EDT– Media briefing on NASA’s TEMPO
-                  (Tropospheric Emissions:Monitoring of Pollution) instrument</a
-                >
+                  >Tue., Mar. 14, 9 a.m. EDT- Media briefing on NASA's TEMPO
+                  (Tropospheric Emissions:Monitoring of Pollution) instrument</a>
               </div>
               <div class="tittle">
                 <a href="#"
-                  >Tue., Mar. 14, 2 p.m. EDT – 2023 South by Southwest
+                  >Tue., Mar. 14, 2 p.m. EDT2023 South by Southwest
                   conference keynote: Unfold the Universe with NASA's Webb Space
-                  Telescope</a
-                >
+                  Telescope</a>
               </div>
               <div class="tittle">
                 <a href="#"
-                  >Tue., Mar. 14, 8 p.m. EDT– Launch coverage of the SpaceX
-                  Dragon commercial resupply mission to the ISS</a
-                >
+                  >Tue., Mar. 14, 8 p.m. EDT- Launch coverage of the SpaceX
+                  Dragon commercial resupply mission to the ISS</a>
               </div>
               <div class="nasa-event-line-second"></div>
               <div class="event-bottom">
@@ -54,24 +49,21 @@
 
             <div class="main-top-right-down">
               <a href="#">
-                Engineers Keep an Eye on Fuel Supply of NASA’s Oldest Mars
-                Orbiter</a
-              >
+                Engineers Keep an Eye on Fuel Supply of NASA's Oldest Mars
+                Orbiter</a>
             </div>
           </div>
         </div>
         <div class="main-middel">
           <div class="main-middel-first card">
             <a href="#"
-              >Spacesuit for NASA’s Artemis III Moon Surface Mission Debuts</a
-            >
+              >Spacesuit for NASA's Artemis III Moon Surface Mission Debuts</a>
           </div>
 
           <div class="main-middel-second card">
             <a href="#"
-              >NASA’s Magellan Data Reveals Volcanic Activity on Venus</a
-            >
-          </div>
+              >NASA's Magellan Data Reveals Volcanic Activity on Venus</a>
+          </div> 
 
           <div class="main-middel-third card">
             <a href="#">Women's History Month</a>
@@ -81,30 +73,24 @@
         <div class="main-bottom">
           <div class="main-bottom-first card">
             <a href="#"
-              >NASA People Diana Trujillo Sparks Students' Curiosity</a
-            >
+              >NASA People Diana Trujillo Sparks Students' Curiosity</a>
           </div>
 
           <div class="main-bottom-second">
-            <a href="#"
-              >Space Station NASA, SpaceX <br />
-              Dragon to Deliver Heart Studies, More to Space Station</a
-            >
+            <a href="#">Space Station NASA, SpaceX <br />
+              Dragon to Deliver Heart Studies, More to Space Station</a>
           </div>
 
           <div class="main-bottom-third">
             <a href="#">
               NASA Ames NASA Begins <br />
               Building its First Robotic <br />
-              Moon Rover</a
-            >
+              Moon Rover</a>
           </div>
 
           <div class="main-bottom-Fourth">
-            <a href="#"
-              >Commercial Space NASA Selects Axiom Space for Third Private
-              Astronaut Station Mission</a
-            >
+            <a href="#">Commercial Space NASA Selects Axiom Space for Third Private
+              Astronaut Station Mission</a>
           </div>
         </div>
       
@@ -122,9 +108,7 @@
               <img src="image/footer image/nasa-logo.svg" alt="" />
             </div>
             <div class="National">
-              <span
-                >National&nbsp;Aeronautics and Space&nbsp;Administration</span
-              ><br />
+              <span>National&nbsp;Aeronautics and Space&nbsp;Administration</span><br/>
               <span>NASA Official: Brian Dunbar</span>
             </div>
 
