--- a/nasa final.html
+++ b/nasa final.html
@@ -30,8 +30,7 @@
                   (Tropospheric Emissions:Monitoring of Pollution) instrument</a>
               </div>
               <div class="tittle">
-                <a href="#"
-                  >Tue., Mar. 14, 2 p.m. EDT2023 South by Southwest
+                <a href="#">Tue., Mar. 14, 2 p.m. EDT2023 South by Southwest
                   conference keynote: Unfold the Universe with NASA's Webb Space
                   Telescope</a>
               </div>
@@ -56,13 +55,11 @@
         </div>
         <div class="main-middel">
           <div class="main-middel-first card">
-            <a href="#"
-              >Spacesuit for NASA's Artemis III Moon Surface Mission Debuts</a>
+            <a href="#">Spacesuit for NASA's Artemis III Moon Surface Mission Debuts</a>
           </div>
 
           <div class="main-middel-second card">
-            <a href="#"
-              >NASA's Magellan Data Reveals Volcanic Activity on Venus</a>
+            <a href="#">NASA's Magellan Data Reveals Volcanic Activity on Venus</a>
           </div> 
 
           <div class="main-middel-third card">
@@ -72,8 +69,7 @@
 
         <div class="main-bottom">
           <div class="main-bottom-first card">
-            <a href="#"
-              >NASA People Diana Trujillo Sparks Students' Curiosity</a>
+            <a href="#">NASA People Diana Trujillo Sparks Students' Curiosity</a>
           </div>
 
           <div class="main-bottom-second">
@@ -84,7 +80,7 @@
           <div class="main-bottom-third">
             <a href="#">
               NASA Ames NASA Begins <br />
-              Building its First Robotic <br />
+              Building its First Robotic <br/>
               Moon Rover</a>
           </div>
 
