--- a/nasa final.html
+++ b/nasa final.html
@@ -35,8 +35,7 @@
                   Telescope</a>
               </div>
               <div class="tittle">
-                <a href="#"
-                  >Tue., Mar. 14, 8 p.m. EDT- Launch coverage of the SpaceX
+                <a href="#">Tue., Mar. 14, 8 p.m. EDT- Launch coverage of the SpaceX
                   Dragon commercial resupply mission to the ISS</a>
               </div>
               <div class="nasa-event-line-second"></div>
