eslahe eshkalate riz

--- a/nasa final.html
+++ b/nasa final.html
@@ -26,8 +26,7 @@
               <h1>nasa Event</h1>
               <div class="nasa-event-line-first"></div>
               <div class="tittle">
-                <a href="#"
-                  >Tue., Mar. 14, 9 a.m. EDT- Media briefing on NASA's TEMPO
+                <a href="#">Tue., Mar. 14, 9 a.m. EDT- Media briefing on NASA's TEMPO
                   (Tropospheric Emissions:Monitoring of Pollution) instrument</a>
               </div>
               <div class="tittle">
