--- a/nasa final.html
+++ b/nasa final.html
@@ -1,42 +1,145 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <style></style>
   </head>
-
   <body>
     <div id="container">
-      <div class="main">
-        <div class="main-top">
-          <div class="main-top-left">
-            <a href="#">
-              Moon to Mars Spacesuit for NASA's Artemis III Moon Surface
-              Mission Debuts</a>
+
+      <div class="header-container">
+        <!-- Html code header[START] -->
+        <div class="header">
+          <!-- Html code header logo-nasa[START] -->
+          <div class="logo-nasa">
+            <img src="image/nasa-logo.svg" alt="" />
+          </div>
+          <!-- Html code header logo-nasa[END] -->
+
+          <!-- Html codes header menu[START] -->
+
+          <div class="menu">
+            <!-- Html codes header links-menu top[START] -->
+
+            <div class="links-menu">
+              <!-- Html codes links-menu top[START] -->
+
+              <!-- Html codes links-menu ul :Missions [START] -->
+              <ul>
+                <li>
+                  <a href="#">Missions </a>
+                  <ul>
+                    <li><a href="#">Artemis </a></li>
+                    <li><a href="#">Commercial Crew </a></li>
+                    <li><a href="#">Hubble Space Telesccope </a></li>
+                    <li><a href="#">James Webb Space Telescope </a></li>
+                    <li><a href="#">Juno: Mission at Jupiter </a></li>
+                    <li><a href="#">International Space Station </a></li>
+                    <li><a href="#">Perseverance Mars Rover </a></li>
+                    <li><a href="#">Parker Solar Probe </a></li>
+                    <li ><a href="#">Quesst </a></li>
+                    
+                    <li><a href="#">Launches and Landings </a></li>
+                    <li><a href="#">All Missions A-Z </a></li>
+                  </ul>
+                </li>
+                <!-- Html code links-menu ul :Missions [END] -->
+
+                <li><a href="#">Galleries </a></li>
+                <li><a href="#">NASA TV </a></li>
+                <li><a href="#">Follow NASA</a></li>
+                <li><a href="#">Downloads </a></li>
+                <li><a href="#">About </a></li>
+                <li><a href="#">NASA Audiences</a></li>
+              </ul>
+
+              <!-- Html codes links-menu top[END] -->
+
+              <!-- Html codes menu search-box top[START] -->
+
+              <div class="search-box">
+                <input type="text" placeholder="search" />
+                <svg
+                  focusable="false"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
+                  ></path>
+                </svg>
+              </div>
+
+              <!-- Html codes menu search-box top[END] -->
+            </div>
+            <!-- Html codes header links-menu top[END] -->
+
+            <!-- Html codes header links-down[START] -->
+
+            <div class="links-down">
+              <ul>
+                <li><a href="#">Humans in Space </a>|</li>
+                <li><a href="#">Moon to Mars </a>|</li>
+                <li><a href="#">Earth </a>|</li>
+                <li><a href="#">Space Tech </a>|</li>
+                <li><a href="#">Fight </a>|</li>
+                <li><a href="#">Solar System and Beyond</a> |</li>
+                <li><a href="#">STEM Engagement </a>|</li>
+                <li><a href="#">History </a>|</li>
+                <li><a href="#">Benefiles to You</a></li>
+              </ul>
+            </div>
+
+            <!-- Html codes header links-down[START] -->
           </div>
 
-          <div class="main-top-right">
-            <div class="main-top-right-up">
-              <a href="#" >
-                Spacesuit for NASA's Artemis III Moon Surface Mission Debuts</a>
+          <!-- Html codes header menu[END] -->
+        </div>
+        <!-- Html code header[END] -->
+      </div>
+
+      <div class="main">
+        <div class="main-top">
+          <a href="index.html">
+            <div class="main-top-left">
+              <h2>OSIRIS-REx</h2>
+              <h1>
+                Moon to Mars Spacesuit for NASA’s Artemis III Moon Surface
+                Mission Debuts
+              </h1>
             </div>
+          </a>
+          <div class="main-top-right">
+            <a href="https://www.nasa.gov/">
+              <div class="main-top-right-up">
+                <h1>
+                  Spacesuit for NASA’s Artemis III Moon Surface Mission Debuts
+                </h1>
+              </div>
+            </a>
 
             <div class="nasa-event">
               <h1>nasa Event</h1>
               <div class="nasa-event-line-first"></div>
               <div class="tittle">
-                <a href="#">Tue., Mar. 14, 9 a.m. EDT- Media briefing on NASA's TEMPO
-                  (Tropospheric Emissions:Monitoring of Pollution) instrument</a>
+                <a href="#"
+                  >Tue., Mar. 14, 9 a.m. EDT– Media briefing on NASA’s TEMPO
+                  (Tropospheric Emissions:Monitoring of Pollution) instrument</a
+                >
               </div>
               <div class="tittle">
-                <a href="#">Tue., Mar. 14, 2 p.m. EDT2023 South by Southwest
+                <a href="#"
+                  >Tue., Mar. 14, 2 p.m. EDT – 2023 South by Southwest
                   conference keynote: Unfold the Universe with NASA's Webb Space
-                  Telescope</a>
+                  Telescope</a
+                >
               </div>
               <div class="tittle">
-                <a href="#">Tue., Mar. 14, 8 p.m. EDT- Launch coverage of the SpaceX
-                  Dragon commercial resupply mission to the ISS</a>
+                <a href="#"
+                  >Tue., Mar. 14, 8 p.m. EDT– Launch coverage of the SpaceX
+                  Dragon commercial resupply mission to the ISS</a
+                >
               </div>
               <div class="nasa-event-line-second"></div>
               <div class="event-bottom">
@@ -44,56 +147,75 @@
                 <a href="#">Launches and Landings</a>
               </div>
             </div>
-
-            <div class="main-top-right-down">
-              <a href="#">
-                Engineers Keep an Eye on Fuel Supply of NASA's Oldest Mars
-                Orbiter</a>
-            </div>
+            <a href="">
+              <div class="main-top-right-down">
+                <h1>
+                  Engineers Keep an Eye on Fuel Supply of NASA’s Oldest Mars
+                  Orbiter
+                </h1>
+              </div>
+            </a>
           </div>
         </div>
         <div class="main-middel">
-          <div class="main-middel-first card">
-            <a href="#">Spacesuit for NASA's Artemis III Moon Surface Mission Debuts</a>
-          </div>
+          <a href="">
+            <div class="main-middel-first card">
+              <h2>Space Station</h2>
+              <h1>
+                Spacesuit for NASA’s Artemis III Moon Surface Mission Debuts
+              </h1>
+            </div>
+          </a>
 
-          <div class="main-middel-second card">
-            <a href="#">NASA's Magellan Data Reveals Volcanic Activity on Venus</a>
-          </div> 
+          <a href="">
+            <div class="main-middel-second card">
+              <h1>NASA’s Magellan Data Reveals Volcanic Activity on Venus</h1>
+            </div>
+          </a>
 
-          <div class="main-middel-third card">
-            <a href="#">Women's History Month</a>
-          </div>
+          <a href="">
+            <div class="main-middel-third card">
+              <h1>Women's History Month</h1>
+            </div>
+          </a>
         </div>
 
         <div class="main-bottom">
-          <div class="main-bottom-first card">
-            <a href="#">NASA People Diana Trujillo Sparks Students' Curiosity</a>
-          </div>
+          <a href="">
+            <div class="main-bottom-first card">
+              <h1>NASA People Diana Trujillo Sparks Students' Curiosity</h1>
+            </div>
+          </a>
+          <a href="">
+            <div class="main-bottom-second">
+              <h1>
+                Space Station NASA, SpaceX <br />
+                Dragon to Deliver Heart Studies, More to Space Station
+              </h1>
+            </div>
+          </a>
 
-          <div class="main-bottom-second">
-            <a href="#">Space Station NASA, SpaceX <br />
-              Dragon to Deliver Heart Studies, More to Space Station</a>
-          </div>
-
-          <div class="main-bottom-third">
-            <a href="#">
-              NASA Ames NASA Begins <br />
-              Building its First Robotic <br/>
-              Moon Rover</a>
-          </div>
-
-          <div class="main-bottom-Fourth">
-            <a href="#">Commercial Space NASA Selects Axiom Space for Third Private
-              Astronaut Station Mission</a>
-          </div>
+          <a href="">
+            <div class="main-bottom-third">
+              <h1>
+                NASA Ames NASA Begins <br />Building its First Robotic
+                <br />Moon Rover
+              </h1>
+            </div>
+          </a>
+          <a href="">
+            <div class="main-bottom-Fourth">
+              <h1>
+                Commercial Space NASA Selects Axiom Space for Third Private
+                Astronaut Station Mission
+              </h1>
+            </div>
+          </a>
         </div>
-      
 
-      <div class="MORE-STORIES">
-        <button>MORE STORIES</button>
+        <div class="MORE-STORIES">
+          <button>MORE STORIES</button>
         </div>
-
       </div>
 
       <div class="allfooter">
@@ -103,7 +225,9 @@
               <img src="image/footer image/nasa-logo.svg" alt="" />
             </div>
             <div class="National">
-              <span>National&nbsp;Aeronautics and Space&nbsp;Administration</span><br/>
+              <span
+                >National&nbsp;Aeronautics and Space&nbsp;Administration</span
+              ><br />
               <span>NASA Official: Brian Dunbar</span>
             </div>
 
