--- a/nasa final.html
+++ b/nasa final.html
@@ -215,8 +215,11 @@
       </div>
     </div>
 
+   <!-- Html codes allfooter[START] -->
     <div class="allfooter">
+      <!-- Html codes footer[START] -->
       <div class="footer">
+        <!-- Html codes footer-info[START] -->
         <div class="footer-info">
           <div class="bottom-logo">
             <img src="image/footer image/nasa-logo.svg" alt="" />
@@ -225,8 +228,10 @@
             <span>National&nbsp;Aeronautics and Space&nbsp;Administration</span><br />
             <span>NASA Official: Brian Dunbar</span>
           </div>
+</div>
+<!-- Html codes footer-info[END] -->
 
-          <div>
+  <!-- Html codes footer-links[START] -->
             <ul id="footer-links">
               <li><a href="#">No Fear Act</a></li>
               <li><a href="#">FOIA</a></li>
@@ -237,10 +242,11 @@
               <li><a href="#">Agency Financial Reports</a></li>
               <li><a href="#">Contact NASA</a></li>
             </ul>
-          </div>
+              <!-- Html codes footer-links[END] -->
         </div>
-      </div>
-    </div>
+          <!-- Html codes footer[END] -->
+    </div> 
+     <!-- Html codes allfooter[END] -->
   </div>
 </body>
 
