--- a/index.html
+++ b/index.html
@@ -421,9 +421,11 @@
           </div>
         </div>
       </div>
-
+ <!-- Html codes allfooter[START] -->
       <div class="allfooter">
+         <!-- Html codes footer[START] -->
         <div class="footer">
+           <!-- Html codes footer-info[START] -->
           <div class="footer-info">
             <div class="bottom-logo">
               <img src="image/footer image/nasa-logo.svg" alt="" />
@@ -435,8 +437,10 @@
               ><br />
               <span>NASA Official: Brian Dunbar</span>
             </div>
+            </div>
+<!-- Html codes footer-info[END] -->
 
-            <div>
+<!-- Html codes footer-links[START] -->
               <ul id="footer-links">
                 <li><a href="#">No Fear Act</a></li>
                 <li><a href="#">FOIA</a></li>
@@ -447,10 +451,11 @@
                 <li><a href="#">Agency Financial Reports</a></li>
                 <li class="Contact-NASA"><a href="#">Contact NASA</a></li>
               </ul>
-            </div>
-          </div>
+              <!-- Html codes footer-links[END] -->
         </div>
+        <!-- Html codes footer[END] -->
       </div>
+      <!-- Html codes allfooter[END] -->
     </div>
   </body>
 </html>
