nasa-project safhe asli
safhe asli tamam

--- a/nasa final.html
+++ b/nasa final.html
@@ -11,8 +11,10 @@
   <div id="container">
 
     <div class="header-container">
+
       <!-- Html code header[START] -->
       <div class="header">
+
         <!-- Html code header logo-nasa[START] -->
         <div class="logo-nasa">
           <img src="image/nasa-logo.svg" alt="" />
@@ -20,12 +22,10 @@
         <!-- Html code header logo-nasa[END] -->
 
         <!-- Html codes header menu[START] -->
-
         <div class="menu">
-          <!-- Html codes header links-menu top[START] -->
 
+          <!-- Html codes header links-menu top[START] -->
           <div class="links-menu">
-            <!-- Html codes links-menu top[START] -->
 
             <!-- Html codes links-menu ul :Missions [START] -->
             <ul>
@@ -37,10 +37,10 @@
                   <li><a href="#">Hubble Space Telesccope </a></li>
                   <li><a href="#">James Webb Space Telescope </a></li>
                   <li><a href="#">Juno: Mission at Jupiter </a></li>
-                  <li><a href="#">International Space Station <a><li>
+                  <li><a href="#">International Space Station</a></li>
                   <li><a href="#">Perseverance Mars Rover </a></li>
                   <li><a href="#">Parker Solar Probe </a></li>
-                  <li><a href="#">Quesst </a></li>
+                  <li class="q"><a href="#">Quesst</a></li>
                   <li><a href="#">Launches and Landings </a></li>
                   <li><a href="#">All Missions A-Z </a></li>
                 </ul>
@@ -54,11 +54,9 @@
               <li><a href="#">About </a></li>
               <li><a href="#">NASA Audiences</a></li>
             </ul>
-
-            <!-- Html codes links-menu top[END] -->
+            <!-- Html codes header links-menu top[END] -->
 
             <!-- Html codes menu search-box top[START] -->
-
             <div class="search-box">
               <div>
                 <input type="text" placeholder="search" />
@@ -72,13 +70,12 @@
                 <img src="image/shere.jpg" alt="">
               </div>
             </div>
-
             <!-- Html codes menu search-box top[END] -->
+
           </div>
           <!-- Html codes header links-menu top[END] -->
 
           <!-- Html codes header links-down[START] -->
-
           <div class="links-down">
             <ul>
               <li><a href="#">Humans in Space </a></li>
@@ -100,7 +97,7 @@
       </div>
       <!-- Html code header[END] -->
     </div>
-<!-- start of main -->
+    <!-- start of main -->
     <div class="main">
       <!-- start of main-top -->
       <div class="main-top">
@@ -219,8 +216,8 @@
         <button>MORE STORIES</button>
       </div>
     </div>
-<!--end of main  -->
-   <!-- Html codes allfooter[START] -->
+    <!--end of main  -->
+    <!-- Html codes allfooter[START] -->
     <div class="allfooter">
       <!-- Html codes footer[START] -->
       <div class="footer">
@@ -233,25 +230,25 @@
             <span>National&nbsp;Aeronautics and Space&nbsp;Administration</span><br />
             <span>NASA Official: Brian Dunbar</span>
           </div>
-</div>
-<!-- Html codes footer-info[END] -->
-
-  <!-- Html codes footer-links[START] -->
-            <ul id="footer-links">
-              <li><a href="#">No Fear Act</a></li>
-              <li><a href="#">FOIA</a></li>
-              <li><a href="#">Privacy</a></li>
-              <li><a href="#">Accessibility</a></li>
-              <li><a href="#">Office of Inspector General</a></li>
-              <li><a href="#">Office of Special Counsel</a></li>
-              <li><a href="#">Agency Financial Reports</a></li>
-              <li><a href="#">Contact NASA</a></li>
-            </ul>
-              <!-- Html codes footer-links[END] -->
         </div>
-          <!-- Html codes footer[END] -->
-    </div> 
-     <!-- Html codes allfooter[END] -->
+        <!-- Html codes footer-info[END] -->
+
+        <!-- Html codes footer-links[START] -->
+        <ul id="footer-links">
+          <li><a href="#">No Fear Act</a></li>
+          <li><a href="#">FOIA</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Accessibility</a></li>
+          <li><a href="#">Office of Inspector General</a></li>
+          <li><a href="#">Office of Special Counsel</a></li>
+          <li><a href="#">Agency Financial Reports</a></li>
+          <li><a href="#">Contact NASA</a></li>
+        </ul>
+        <!-- Html codes footer-links[END] -->
+      </div>
+      <!-- Html codes footer[END] -->
+    </div>
+    <!-- Html codes allfooter[END] -->
   </div>
 </body>
 
