refactor(index, landing): adding comment to the code fixing style of …   …the mega menu in the header and solving the hover effect to the header

--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
                     <li><a href="#">Perseverance Mars Rover </a></li>
                     <li><a href="#">Parker Solar Probe </a></li>
                     <li><a href="#">Quesst </a></li>
-  
                     <li><a href="#">Launches and Landings </a></li>
                     <li><a href="#">All Missions A-Z </a></li>
                   </ul>
@@ -94,11 +93,20 @@
         </div>
         <!-- Html code header[END] -->
       </div>
+      <!-- start of main -->
       <div class="main">
+        <!--  -->
         <div class="main-left">
           <ul>
+            <div class="main-left-button">
+           <div>
             <button class="left-button top">Related</button>
-            <button class="right-button top">Latest</button>
+            </div> 
+            <div>
+              <button class="right-button top">Latest</button>
+            </div>
+
+           </div>
             <li>
               <a href=""
                 >NASA’s OSIRIS-REx Asteroid Sample Return Team Receives 2022
@@ -421,11 +429,11 @@
           </div>
         </div>
       </div>
- <!-- Html codes allfooter[START] -->
+      <!--end of main  -->
+
+      <!--start of footer  -->
       <div class="allfooter">
-         <!-- Html codes footer[START] -->
         <div class="footer">
-           <!-- Html codes footer-info[START] -->
           <div class="footer-info">
             <div class="bottom-logo">
               <img src="image/footer image/nasa-logo.svg" alt="" />
@@ -437,10 +445,8 @@
               ><br />
               <span>NASA Official: Brian Dunbar</span>
             </div>
-            </div>
-<!-- Html codes footer-info[END] -->
 
-<!-- Html codes footer-links[START] -->
+            <div>
               <ul id="footer-links">
                 <li><a href="#">No Fear Act</a></li>
                 <li><a href="#">FOIA</a></li>
@@ -448,14 +454,15 @@
                 <li><a href="#">Accessibility</a></li>
                 <li><a href="#">Office of Inspector General</a></li>
                 <li><a href="#">Office of Special Counsel</a></li>
-                <li><a href="#">Agency Financial Reports</a></li>
+                <li><a href="#">Agency Financial Reports</a></li> <br>
                 <li class="Contact-NASA"><a href="#">Contact NASA</a></li>
               </ul>
-              <!-- Html codes footer-links[END] -->
+            </div>
+          </div>
         </div>
-        <!-- Html codes footer[END] -->
       </div>
-      <!-- Html codes allfooter[END] -->
+
+      <!-- end of footer -->
     </div>
   </body>
 </html>
