--- a/nasa final.html
+++ b/nasa final.html
@@ -37,11 +37,10 @@
                   <li><a href="#">Hubble Space Telesccope </a></li>
                   <li><a href="#">James Webb Space Telescope </a></li>
                   <li><a href="#">Juno: Mission at Jupiter </a></li>
-                  <li><a href="#">International Space Station </a></li>
+                  <li><a href="#">International Space Station <a><li>
                   <li><a href="#">Perseverance Mars Rover </a></li>
                   <li><a href="#">Parker Solar Probe </a></li>
                   <li><a href="#">Quesst </a></li>
-
                   <li><a href="#">Launches and Landings </a></li>
                   <li><a href="#">All Missions A-Z </a></li>
                 </ul>
@@ -101,8 +100,9 @@
       </div>
       <!-- Html code header[END] -->
     </div>
-
+<!-- start of main -->
     <div class="main">
+      <!-- start of main-top -->
       <div class="main-top">
         <a href="index.html">
           <div class="main-top-left">
@@ -154,6 +154,9 @@
           </a>
         </div>
       </div>
+      <!-- end of main-top -->
+
+      <!-- start of main-middel -->
       <div class="main-middel">
         <a href="">
           <div class="main-middel-first card">
@@ -176,7 +179,8 @@
           </div>
         </a>
       </div>
-
+      <!-- end of main-middel -->
+      <!-- start of main-bottom -->
       <div class="main-bottom">
         <a href="">
           <div class="main-bottom-first card">
@@ -209,12 +213,13 @@
           </div>
         </a>
       </div>
+      <!-- end of main-bottom -->
 
       <div class="MORE-STORIES">
         <button>MORE STORIES</button>
       </div>
     </div>
-
+<!--end of main  -->
    <!-- Html codes allfooter[START] -->
     <div class="allfooter">
       <!-- Html codes footer[START] -->
