fixed header menu
ezafe kardane new menus

--- a/nasa final.html
+++ b/nasa final.html
@@ -40,19 +40,90 @@
                   <li><a href="#">International Space Station</a></li>
                   <li><a href="#">Perseverance Mars Rover </a></li>
                   <li><a href="#">Parker Solar Probe </a></li>
-                  <li class="q"><a href="#">Quesst</a></li>
+                  <li><a href="#">Quesst</a></li>
+                  <li class="menu-Quesst"></li>
                   <li><a href="#">Launches and Landings </a></li>
                   <li><a href="#">All Missions A-Z </a></li>
                 </ul>
               </li>
               <!-- Html code links-menu ul :Missions [END] -->
 
-              <li><a href="#">Galleries </a></li>
-              <li><a href="#">NASA TV </a></li>
-              <li><a href="#">Follow NASA</a></li>
-              <li><a href="#">Downloads </a></li>
-              <li><a href="#">About </a></li>
-              <li><a href="#">NASA Audiences</a></li>
+               <!-- Html code links-menu ul :Galleries [START] -->
+               <li>
+                <a href="#">Galleries </a>
+                <ul>
+                  <li><a href="#">Image of the Day </a></li>
+                  <li><a href="#">Image Galleries </a></li>
+                  <li><a href="#">Ultra High-Def Videos </a></li>
+                  <li><a href="#">Usage and Copyright </a></li>
+                  <li><a href="#">Videos </a></li>
+                </ul>
+              </li>
+              <!-- Html code links-menu ul :Galleries [END] -->
+
+             <li><a href="#">NASA TV </a></li>
+
+             <!-- Html code links-menu ul :Follow NASA [START] -->
+              <li>
+                <a href="#">Follow NASA</a>
+                <ul>
+                  <li><a href="#">Get Involved </a></li>
+                  <li><a href="#">NASA Blogs </a></li>
+                  <li><a href="#">NASA Live </a></li>
+                  <li><a href="#">NASA Newsletters </a></li>
+                  <li><a href="#">NASA Socials </a></li>
+                  <li><a href="#">Socials Media </a></li>
+                  <li><a href="#">Spot the Station </a></li>
+                  <li><a href="#">Join the Virtual Guest List </a></li>
+                </ul>
+              </li>
+               <!-- Html code links-menu ul :Follow NASA [END] -->
+
+              <!-- Html code links-menu ul :Downloads [START] -->
+              <li>
+                <a href="#">Downloads </a>
+                <ul>
+                  <li><a href="#">Apps </a></li>
+                  <li><a href="#">Audio & Ringtones </a></li>
+                  <li><a href="#">E-Books </a></li>
+                  <li><a href="#">Podcasts </a></li>
+                  <li><a href="#">Third Rock Radio </a></li>
+                </ul>
+              </li>
+               <!-- Html code links-menu ul :Downloads [END] -->
+              
+              <!-- Html code links-menu ul :About [START] -->
+              <li>
+                <a href="#">About </a>
+                <ul>
+                  <li><a href="#">About NASA </a></li>
+                  <li><a href="#">Astronauts </a></li>
+                  <li><a href="#">Careers@NASA </a></li>
+                  <li><a href="#">Exhibits and Speakers </a></li>
+                  <li><a href="#">Leadership </a></li>
+                  <li><a href="#">Locations </a></li>
+                  <li><a href="#">Organization </a></li>
+                  <li><a href="#">People of NASA </a></li>
+                </ul>
+              </li>
+              <!-- Html code links-menu ul :About [END] -->
+
+              <!-- Html code links-menu ul :NASA Audiences [START] -->
+              <li>
+                <a href="#">NASA Audiences</a>
+                <ul>
+                <li><a href="#">Fore Media </a></li>
+                  <li><a href="#">Fore Educators </a></li>
+                  <li><a href="#">Fore Students </a></li>
+                  <li class="menu-ForeStudents"></li>
+                  <li><a href="#">Grades K-4 </a></li>
+                  <li><a href="#">Grades 5-8 </a></li>
+                  <li><a href="#">Grades 9-12 </a></li>
+                  <li><a href="#">Colleges and Universities </a></li>
+                </ul>
+              </li>
+              <!-- Html code links-menu ul :NASA Audiences [END] -->
+
             </ul>
             <!-- Html codes header links-menu top[END] -->
 
