fixed header borders

--- a/nasa final.html
+++ b/nasa final.html
@@ -41,7 +41,7 @@
                   <li><a href="#">Perseverance Mars Rover </a></li>
                   <li><a href="#">Parker Solar Probe </a></li>
                   <li><a href="#">Quesst</a></li>
-                  <li class="menu-Quesst"></li>
+                  <li class="border-menu-Quesst"></li>
                   <li><a href="#">Launches and Landings </a></li>
                   <li><a href="#">All Missions A-Z </a></li>
                 </ul>
@@ -115,7 +115,7 @@
                 <li><a href="#">Fore Media </a></li>
                   <li><a href="#">Fore Educators </a></li>
                   <li><a href="#">Fore Students </a></li>
-                  <li class="menu-ForeStudents"></li>
+                  <li class="border-menu-ForeStudents"></li>
                   <li><a href="#">Grades K-4 </a></li>
                   <li><a href="#">Grades 5-8 </a></li>
                   <li><a href="#">Grades 9-12 </a></li>
