nsas-project nhaii
pak sazi code v moratab kardn code v rezhe kari hai koli

--- a/nasa final.html
+++ b/nasa final.html
@@ -8,8 +8,11 @@
 </head>
 
 <body>
+
+  <!-- HTML code container[START] -->
   <div id="container">
 
+    <!-- html code header-container[START] -->
     <div class="header-container">
 
       <!-- Html code header[START] -->
@@ -41,16 +44,15 @@
                   <li><a href="#">Perseverance Mars Rover </a></li>
                   <li><a href="#">Parker Solar Probe </a></li>
                   <li><a href="#">Quesst</a></li>
-                  <li class="border-menu-Quesst"></li>
+                  <li class="border-Quesst"></li>
                   <li><a href="#">Launches and Landings </a></li>
                   <li><a href="#">All Missions A-Z </a></li>
                 </ul>
               </li>
               <!-- Html code links-menu ul :Missions [END] -->
 
-               <!-- Html code links-menu ul :Galleries [START] -->
-               <li>
-                <a href="#">Galleries </a>
+              <!-- Html code links-menu ul :Galleries [START] -->
+              <li><a href="#">Galleries </a>
                 <ul>
                   <li><a href="#">Image of the Day </a></li>
                   <li><a href="#">Image Galleries </a></li>
@@ -61,11 +63,10 @@
               </li>
               <!-- Html code links-menu ul :Galleries [END] -->
 
-             <li><a href="#">NASA TV </a></li>
+              <li><a href="#">NASA TV </a></li>
 
-             <!-- Html code links-menu ul :Follow NASA [START] -->
-              <li>
-                <a href="#">Follow NASA</a>
+              <!-- Html code links-menu ul :Follow NASA [START] -->
+              <li><a href="#">Follow NASA</a>
                 <ul>
                   <li><a href="#">Get Involved </a></li>
                   <li><a href="#">NASA Blogs </a></li>
@@ -77,11 +78,10 @@
                   <li><a href="#">Join the Virtual Guest List </a></li>
                 </ul>
               </li>
-               <!-- Html code links-menu ul :Follow NASA [END] -->
+              <!-- Html code links-menu ul :Follow NASA [END] -->
 
               <!-- Html code links-menu ul :Downloads [START] -->
-              <li>
-                <a href="#">Downloads </a>
+              <li><a href="#">Downloads </a>
                 <ul>
                   <li><a href="#">Apps </a></li>
                   <li><a href="#">Audio & Ringtones </a></li>
@@ -90,11 +90,11 @@
                   <li><a href="#">Third Rock Radio </a></li>
                 </ul>
               </li>
-               <!-- Html code links-menu ul :Downloads [END] -->
-              
+              <!-- Html code links-menu ul :Downloads [END] -->
+
+
               <!-- Html code links-menu ul :About [START] -->
-              <li>
-                <a href="#">About </a>
+              <li><a href="#">About </a>
                 <ul>
                   <li><a href="#">About NASA </a></li>
                   <li><a href="#">Astronauts </a></li>
@@ -109,21 +109,19 @@
               <!-- Html code links-menu ul :About [END] -->
 
               <!-- Html code links-menu ul :NASA Audiences [START] -->
-              <li>
-                <a href="#">NASA Audiences</a>
+              <li><a href="#">NASA Audiences</a>
                 <ul>
-                <li><a href="#">Fore Media </a></li>
-                  <li><a href="#">Fore Educators </a></li>
-                  <li><a href="#">Fore Students </a></li>
-                  <li class="border-menu-ForeStudents"></li>
-                  <li><a href="#">Grades K-4 </a></li>
-                  <li><a href="#">Grades 5-8 </a></li>
-                  <li><a href="#">Grades 9-12 </a></li>
-                  <li><a href="#">Colleges and Universities </a></li>
-                </ul>
+                  <li><a href="#">Fore Media </a></li>
+                    <li><a href="#">Fore Educators </a></li>
+                    <li><a href="#">Fore Students </a></li>
+                    <li class="border-Fore"></li>
+                    <li><a href="#">Grades K-4 </a></li>
+                    <li><a href="#">Grades 5-8 </a></li>
+                    <li><a href="#">Grades 9-12 </a></li>
+                    <li><a href="#">Colleges and Universities </a></li>
+                  </ul>
               </li>
               <!-- Html code links-menu ul :NASA Audiences [END] -->
-
             </ul>
             <!-- Html codes header links-menu top[END] -->
 
@@ -138,7 +136,7 @@
                 </svg>
               </div>
               <div>
-                <img src="image/shere.jpg" alt="">
+                <img src="image/share.jpg" alt="">
               </div>
             </div>
             <!-- Html codes menu search-box top[END] -->
@@ -160,16 +158,19 @@
               <li><a href="#">Benefiles to You</a></li>
             </ul>
           </div>
-
           <!-- Html codes header links-down[START] -->
-        </div>
 
+        </div>
         <!-- Html codes header menu[END] -->
+
       </div>
       <!-- Html code header[END] -->
     </div>
+    <!-- html code header-container[START] -->
+
     <!-- start of main -->
     <div class="main">
+
       <!-- start of main-top -->
       <div class="main-top">
         <a href="index.html">
@@ -190,6 +191,7 @@
             </div>
           </a>
 
+          <!-- html code nasa-event[START] -->
           <div class="nasa-event">
             <h1>nasa Event</h1>
             <div class="nasa-event-line-first"></div>
@@ -197,21 +199,26 @@
               <a href="#">Tue., Mar. 14, 9 a.m. EDT-Media briefing on NASA's TEMPO
                 (Tropospheric Emissions:Monitoring of Pollution) instrument</a>
             </div>
+
             <div class="tittle">
               <a href="#">Tue., Mar. 14, 2 p.m. EDT-2023 South by Southwest
                 conference keynote: Unfold the Universe with NASA's Webb Space
                 Telescope</a>
             </div>
+
             <div class="tittle">
               <a href="#">Tue., Mar. 14, 8 p.m. EDT-Launch coverage of the SpaceX
                 Dragon commercial resupply mission to the ISS</a>
             </div>
+
             <div class="nasa-event-line-second"></div>
             <div class="event-bottom">
               <a href="#">NASA TV Schedule</a>
               <a href="#">Launches and Landings</a>
             </div>
           </div>
+          <!-- html code nasa-event[END] -->
+
           <a href="">
             <div class="main-top-right-down">
               <h1>
@@ -221,6 +228,7 @@
             </div>
           </a>
         </div>
+
       </div>
       <!-- end of main-top -->
 
@@ -248,6 +256,7 @@
         </a>
       </div>
       <!-- end of main-middel -->
+
       <!-- start of main-bottom -->
       <div class="main-bottom">
         <a href="">
@@ -288,24 +297,28 @@
       </div>
     </div>
     <!--end of main  -->
-    <!-- Html codes allfooter[START] -->
-    <div class="allfooter">
-      <!-- Html codes footer[START] -->
-      <div class="footer">
-        <!-- Html codes footer-info[START] -->
-        <div class="footer-info">
-          <div class="bottom-logo">
-            <img src="image/footer image/nasa-logo.svg" alt="" />
-          </div>
-          <div class="National">
-            <span>National&nbsp;Aeronautics and Space&nbsp;Administration</span><br />
-            <span>NASA Official: Brian Dunbar</span>
-          </div>
-        </div>
-        <!-- Html codes footer-info[END] -->
 
-        <!-- Html codes footer-links[START] -->
-        <ul id="footer-links">
+    <!-- Html codes footer[START] -->
+    <div class="footer">
+
+      <!-- Html codes footer-info[START] -->
+      <div class="footer-info">
+
+        <div class="bottom-logo">
+          <img src="image/footer image/nasa-logo.svg" alt="" />
+        </div>
+
+        <div class="National">
+          <span>National&nbsp;Aeronautics and Space&nbsp;Administration</span><br />
+          <span>NASA Official: Brian Dunbar</span>
+        </div>
+
+      </div>
+      <!-- Html codes footer-info[END] -->
+
+      <!-- Html codes footer-links[START] -->
+      <div id="footer-links">
+        <ul>
           <li><a href="#">No Fear Act</a></li>
           <li><a href="#">FOIA</a></li>
           <li><a href="#">Privacy</a></li>
@@ -315,12 +328,14 @@
           <li><a href="#">Agency Financial Reports</a></li>
           <li><a href="#">Contact NASA</a></li>
         </ul>
-        <!-- Html codes footer-links[END] -->
       </div>
-      <!-- Html codes footer[END] -->
+      <!-- Html codes footer-links[END] -->
+
     </div>
-    <!-- Html codes allfooter[END] -->
+    <!-- Html codes footer[END] -->
+
   </div>
+  <!-- HTML code container[END] -->
 </body>
 
 </html>
