--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
       <!-- start of main-top -->
       <div class="main-top">
-        <a href="index.html">
+        <a href="safhe2.html">
           <div class="main-top-left">
             <h2>OSIRIS-REx</h2>
             <h1>
